<package format="2">
  <name>dsr_launcher</name>
  <version>1.2.0</version>
  <description>dsr_launcher examples</description>

  <author email="kabkyoum.kim@doosan.com">Kab Kyoum Kim</author>
  <author email="jinhyuk.gong@doosan.com">Jin Hyuk Gong</author>
  <author email="jeongwoo1.lee@doosan.com">Jeongwoo Lee</author>
 
  <maintainer email="ros.robotics@doosan.com">Doosan Robotics</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/doosan_robotics</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>dsr_gazebo</exec_depend>
  <exec_depend>moveit_config_m0609</exec_depend>
  <exec_depend>moveit_config_m0617</exec_depend>
  <exec_depend>moveit_config_m1013</exec_depend>
  <exec_depend>moveit_config_m1509</exec_depend>
  <exec_depend>moveit_config_a0509</exec_depend>
  <exec_depend>moveit_config_a0912</exec_depend>
  <exec_depend>moveit_config_h2017</exec_depend>
  <exec_depend>moveit_config_h2515</exec_depend>

  <test_depend>rostest</test_depend>

</package>
